applications/atlassian/jira-software/jira-software-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    kubernetes.io/tls-acme: "true"
  name: jira-software
  namespace: atlassian-jira-software
spec:
  rules:
  - host: jira.domain.com
    http:
      paths:
      - backend:
          serviceName: jira-software-service
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - jira.domain.com
    secretName: jira-software-tls
